[gd_scene load_steps=2 format=3 uid="uid://bv8xq7jy4f3hc"]

[ext_resource type="Script" path="res://scripts/ui/character_creation.gd" id="1"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Create Your Survivor"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 40
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3

[node name="SubtitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "Choose a name and type"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="CreationContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="NameInputLabel" type="Label" parent="MarginContainer/VBoxContainer/CreationContainer"]
layout_mode = 2
text = "Survivor Name:"
theme_override_font_sizes/font_size = 24

[node name="NameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/CreationContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
placeholder_text = "Enter survivor name..."
theme_override_font_sizes/font_size = 20
max_length = 20
caret_blink = true

[node name="TypeSelectionLabel" type="Label" parent="MarginContainer/VBoxContainer/CreationContainer"]
layout_mode = 2
text = "Select Character Type:"
theme_override_font_sizes/font_size = 24

[node name="CharacterTypeCards" type="GridContainer" parent="MarginContainer/VBoxContainer/CreationContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Cancel"

[node name="CreateButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Create Survivor"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
